@@ -1,2 +1,0 @@
-Site URL: http://www.incestflix.com/
-DMCA: http://www.incestflix.com/dmca
